# devca

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES
.github/workflows/: release.yml
docs/: firefox-ca-install.md
scripts/: gen-changelog.sh
snap/: snapcraft.yaml
src/: certs.rs  commands.rs  dirs.rs  helpers.rs  main.rs
