[package]
name = "devca"
version = "0.1.0"
authors = ["Grant Orndorff <orndorffgrant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
dirs = "3.0.1"
openssl = { version = "0.10.30", features = ["vendored"] }
