[package]
name = "devca"
version = "0.1.0"
authors = ["Grant Orndorff <orndorffgrant@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dirs = "3.0.1"
picky = "6.0.0-beta5"
chrono = "0.4.19"
